# SSH_VM_TEMPLATE

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: dummy.py  test_pipeline.py
tests/: health_check.py  vps_health.py
