[project]
name = "SSH_VM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MrAnasAbid", email = "m.abid.anas@gmail.com"},
]
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "plotly>=5.24.1",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
